--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@
 		</div>
 		<div class="subscribe width-cut">
 			<h2>Design tips, tricks, and freebies. Delivered weekly.</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A expedita tenetur reiciendis quidem iusto.</p>
-			<div class="subscribe-form">
-				<p>Email Address...</p>
-				<a href="">SUBSCRIBE</a>
-			</div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A expedita tenetur reiciendis quidem iusto.</p>			
+			<form action="" type="GET" class="subscribe-form">
+				<input type="email" required placeholder="Email Address...">
+				<button type="submit">SUBSCRIBE</button>
+			</form>
 		</div>
 		<div class="feedback">
 			<div class="feedback-title width-cut">
 				<h2>Get in touch</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque expedita consequatur minima laborum, cupiditate tempore est, illum aut dolores, reiciendis temporibus quis velit, ex facilis laboriosam? Expedita ducimus quod molestiae?</p>
 				<hr>
-			</div>
+			</div>			
 			<div class="feedback-form-wrapper">
-				<div class="feedback-form">
-					<div class="feedback-form-name">Name</div>
-					<div class="feedback-form-mail">Your e-mail</div>
-					<div class="feedback-form-message">Type your message</div>
-					<a class="feedback-form-submit" href="">SEND MESSAGE</a>
-				</div>
+				<form action="" type="GET" class="feedback-form">
+					<input type="text" class="feedback-form-name" placeholder="Name" required name="name">
+					<input type="email" class="feedback-form-mail" placeholder="Your e-mail" required name="email">
+					<textarea type="text" class="feedback-form-message" placeholder="Type your message" required name="message"></textarea>
+					<button type="submit" class="feedback-form-submit">SEND MESSAGE</button>
+				</form>
 				<div class="feedback-contacts">
 					<h3>Contact info</h3>
 					<p><br>Jalalabad 24 / A, Ambaarkhana, Sylhet,<br>Bangladesh<br><br>redwan@deviserweb.com<br><br>(+88) 017 617 46373</p>
