--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		<div class="subscribe width-cut">
 			<h2>Design tips, tricks, and freebies. Delivered weekly.</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A expedita tenetur reiciendis quidem iusto.</p>			
-			<form action="" type="GET" class="subscribe-form">
+			<form action="" method="GET" class="subscribe-form">
 				<input type="email" required placeholder="Email Address...">
 				<button type="submit">SUBSCRIBE</button>
 			</form>
@@ -122,7 +122,7 @@
 				<hr>
 			</div>			
 			<div class="feedback-form-wrapper">
-				<form action="" type="GET" class="feedback-form">
+				<form action="" method="GET" class="feedback-form">
 					<input type="text" class="feedback-form-name" placeholder="Name" required name="name">
 					<input type="email" class="feedback-form-mail" placeholder="Your e-mail" required name="email">
 					<textarea type="text" class="feedback-form-message" placeholder="Type your message" required name="message"></textarea>
