--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<h2>Design tips, tricks, and freebies. Delivered weekly.</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A expedita tenetur reiciendis quidem iusto.</p>			
 			<form action="" method="GET" class="subscribe-form">
-				<input type="email" required placeholder="Email Address...">
+				<input type="email" required name="subscriber" placeholder="Email Address...">
 				<button type="submit">SUBSCRIBE</button>
 			</form>
 		</div>
